# x11rb

./: Cargo.toml  generate.sh
.cargo/: config.toml
generator/: Cargo.toml
generator/src/: main.rs
generator/src/generator/: error_events.rs  mod.rs  requests_replies.rs  special_cases.rs
generator/src/generator/namespace/: expr_to_str.rs  header.rs  helpers.rs  mod.rs  parse.rs  request.rs  serialize.rs  struct_type.rs  switch.rs
x11rb/: Cargo.toml
x11rb-protocol/src/connection/: mod.rs
x11rb-protocol/src/protocol/: mod.rs
x11rb/benches/: benchmark.rs
x11rb/src/: connect.rs  cookie.rs  errors.rs  id_allocator.rs  lib.rs  properties.rs  socket_connection.rs  utils.rs  wrapper.rs  x11_utils.rs  xauth.rs
x11rb/src/cursor/: find_cursor.rs  mod.rs  parse_cursor.rs
x11rb/src/parse_display/: connect_instruction.rs  mod.rs
x11rb/src/protocol/: bigreq.rs  composite.rs  damage.rs  dpms.rs  dri2.rs  dri3.rs  ge.rs  glx.rs  mod.rs  present.rs  randr.rs  record.rs  render.rs  res.rs  screensaver.rs  shape.rs  shm.rs  sync.rs  xc_misc.rs  xevie.rs  xf86dri.rs  xf86vidmode.rs  xfixes.rs  xinerama.rs  xinput.rs  xkb.rs  xprint.rs  xproto.rs  xselinux.rs  xtest.rs  xv.rs  xvmc.rs
x11rb/src/resource_manager/: mod.rs
x11rb/src/resource_manager/protocol/: matcher.rs  mod.rs  parser.rs
x11rb/src/rust_connection/: mod.rs  packet_reader.rs
x11rb/src/xcb/: bigreq.rs  composite.rs  damage.rs  dpms.rs  dri2.rs  dri3.rs  ge.rs  glx.rs  mod.rs  present.rs  randr.rs  record.rs  render.rs  res.rs  screensaver.rs  shape.rs  shm.rs  sync.rs  xc_misc.rs  xevie.rs  xf86dri.rs  xf86vidmode.rs  xfixes.rs  xinerama.rs  xinput.rs  xkb.rs  xprint.rs  xproto.rs  xselinux.rs  xtest.rs  xv.rs  xvmc.rs
xcbgen-rs/: Cargo.toml
xcbgen-rs/src/: lib.rs  parser.rs
xcbgen-rs/src/defs/: alignment.rs  expression.rs  fields.rs  mod.rs  top_level.rs
xcbgen-rs/src/resolver/: align_checker.rs  extra_fields_inserter.rs  field_ref_resolver.rs  nesting_checker.rs  param_ref_gatherer.rs  type_resolver.rs
xtrace-example/src/: connection.rs  connection_inner.rs
