[package]
name = "x11rb"
version = "0.10.0"
description = "Rust bindings to X11"
authors = [
    "Uli Schlachter <psychon@znc.in>",
    "Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>",
    "notgull <jtnunley01@gmail.com>",
]
repository = "https://github.com/psychon/x11rb"
readme = "../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["xcb", "X11"]
exclude = [
    "/xcb-proto-1.14-1-g2b3559c",
    "/Makefile",
    "/.mergify.yml",
    "/appveyor.yml",
]

[dependencies]
smallmap = { version = "1.4.0", default-features = false }
nix = { version = "0.24.1", default-features = false, features = ["hostname", "poll"] }
heapless = { version = "0.7.15", default-features = false }

[features]
default = []
debug = []
# Enable utility functions in `x11rb::cursor` for loading mouse cursors.
cursor = ["render"]

# Enable this feature to enable all the X11 extensions
all-extensions = [
    "composite",
    "damage",
    "dpms",
    "dri2",
    "dri3",
    "glx",
    "present",
    "randr",
    "record",
    "render",
    "res",
    "screensaver",
    "shape",
    "shm",
    "sync",
    "xevie",
    "xf86dri",
    "xf86vidmode",
    "xfixes",
    "xinerama",
    "xinput",
    "xkb",
    "xprint",
    "xselinux",
    "xtest",
    "xv",
    "xvmc",
]

# Features to enable individual X11 extensions
composite = ["xfixes"]
damage = ["xfixes"]
dpms = []
dri2 = []
dri3 = []
glx = []
present = ["randr", "xfixes", "sync"]
randr = ["render"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["render", "shape"]
xinerama = []
xinput = ["xfixes"]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]

[package.metadata.docs.rs]
features = [
    "all-extensions",
    "allow-unsafe-code",
    "cursor",
    "dl-libxcb",
    "image",
    "resource_manager",
]

[dev-dependencies]
tiny-bench = "0.1.0"

[[bench]]
name = "benchmark"
harness = false
